# c-boilerplate

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: foo.h
src/: CMakeLists.txt  foo.c  main.c
tests/: CMakeLists.txt  test_foo.c
